# architecture_with_cpp

./: .gitignore  README.md
base/src/Solid/OpenClose/: MPair.hpp
base/test/: CMakeLists.txt
base/test/Solid/: OpenCloseTest.cpp
part1/: .gitignore  CMakeLists.txt
part1/src/: CMakeLists.txt  main.cpp  version.hpp
part1/src/Solid/DependencyInversion/: BackEndDeveloper.hpp  FrontEndDeveloper.hpp  Project.hpp
part1/src/Solid/InterfaceSegregation/GoodApplication/: CircleAnim.hpp  IAnimation.hpp  IGeometricFigure.hpp  Rectangle.hpp  Square.hpp
part1/src/Solid/LiskovSubstitution/BadApplication/: Rectangle.hpp  Square.hpp
part1/src/Solid/OpenClose/: MPair.hpp
part1/test/: CMakeLists.txt  DependencyInversionTest.cpp  InterfaceSegregationTest.cpp  LiskovSubstitutionTest.cpp  OpenCloseTest.cpp
part1/test/Solid/: DependencyInversionTest.cpp  InterfaceSegregationTest.cpp  LiskovSubstitutionTest.cpp  OpenCloseTest.cpp
template_source/: CMakeLists.txt
template_source/src/: CMakeLists.txt
template_source/test/: main.cpp
